crates/vize_atelier_sfc/src/snapshots/vize_atelier_sfc__rewrite_default__tests__no_default_export.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default.rs
expression: result.as_str()
---
export const a = {}
const _sfc_main = {}
