crates/vize_atelier_sfc/src/snapshots/vize_atelier_sfc__rewrite_default__tests__rewrite_default_class.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default.rs
expression: result.as_str()
---
class Foo {}
const _sfc_main = Foo
