crates/vize_atelier_sfc/src/snapshots/vize_atelier_sfc__rewrite_default__tests__rewrite_default_with_other_code.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default.rs
expression: result.as_str()
---

import { ref } from 'vue'

const count = ref(0)

const _sfc_main = {
  name: 'MyComponent'
}
